Added place your order

--- a/content/index.html
+++ b/content/index.html
@@ -24,6 +24,8 @@
    <li><a href="content/tech_specs.html">Tech Specs</li>
    <li><a href="content/numbers.html">A380 in Numbers</li>
    <li><a href="content/facts.html">Fun Facts</li>
+   <li><a href="content/place-order.html">Place your order</li>
+
   </ul>
 </nav>
 
