--- a/content/facts.html
+++ b/content/facts.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Facts</title>
+  <title>Fun Facts</title>
 </head>
 <body>
 
 
-
+<footer>
+    <a href="index.html">Back to main page</a>
+  </footer>
 </body>
 </html>
