--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>The A380 Project</title>
-  <meta charset="UTF-6">
+
   <meta name="The A380 Project" content="Everything about the project of the Airbus A380">
   <meta name="keywords" content="A380,A380 Project,Airbus,Aviation,">
   <meta name="author" content="Fred Gomide">
@@ -21,14 +22,34 @@
 
 <nav>
   <ul>
-   <li><a href="content/tech_specs.html">Tech Specs</li>
-   <li><a href="content/numbers.html">A380 in Numbers</li>
-   <li><a href="content/facts.html">Fun Facts</li>
-   <li><a href="content/place-order.html">Place your order</li>
-
+  <li>
+    <a href="tech_specs.html">Tech Specs</a>
+  </li>
+  <li>
+    <a href="numbers.html">A380 in Numbers</a>
+  </li>
+  <li>
+    <a href="facts.html">Fun Facts</a>
+  </li>
+  <li>
+    <a href="place-order.html">Place your order</a>
+  </li>
   </ul>
 </nav>
 
+<div>
+ <h3>History</h3>
+ <p>The Airbus A380 is a double-deck, wide-body, four-engine jet airliner manufactured by European manufacturer Airbus. It is the world's largest passenger airliner, and the airports at which it operates have upgraded facilities to accommodate it. It was initially named Airbus A3XX and designed to challenge Boeing's monopoly in the large-aircraft market. The A380 made its first flight on 27 April 2005 and entered commercial service on 25 October 2007 with Singapore Airlines.
+<br>
+<br>
+The A380's upper deck extends along the entire length of the fuselage, with a width equivalent to a wide-body aircraft. This gives the A380-800's cabin 550 square metres (5,920 sq ft) of usable floor space, 40% more than the next largest airliner, the Boeing 747-8, and provides seating for 525 people in a typical three-class configuration or up to 853 people in an all-economy class configuration. The A380-800 has a design range of 8,500 nautical miles (15,700 km), serving the second- and third-longest non-stop scheduled flights in the world (as of February 2017), and a cruising speed of Mach 0.85 (about 900 km/h, 560 mph or 490 kt at cruising altitude).
+<br>
+<br>
+As of May 2017, Airbus had received 317 firm orders and delivered 213 aircraft; Emirates is the biggest A380 customer with 142 ordered of which 95 have been delivered.</p>
+</div>
+
+
+<p>For more information on this beautiful engineering creation go to <a href="http://www.airbus.com/aircraftfamilies/passengeraircraft/a380family/">Airbus</a></p>
 
 </body>
 </html>
