Stylesheet added to website

--- a/content/index2.html
+++ b/content/index2.html
@@ -8,6 +8,8 @@
   <meta name="author" content="Fred Gomide">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" type="text/css" src="styles.css">
+
 </head>
 <body>
 
