--- a/content/index.html
+++ b/content/index.html
@@ -7,12 +7,14 @@
   <meta name="The A380 Project" content="Everything about the project of the Airbus A380">
   <meta name="keywords" content="A380,A380 Project,Airbus,Aviation,">
   <meta name="author" content="Fred Gomide">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
-  <h1>The larger comercial airplane in service.</h1>
+  <h1>The largest comercial airplane in service.</h1>
 
   <h2>The Airbus A380 is a double-deck, wide-body, four-engine jet airliner manufactured by European manufacturer Airbus</h2>
 
