--- a/content/place-order.html
+++ b/content/place-order.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Place your Order</title>
+
+  <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
 
